tests/invalid/Tuple_Invalid_8.whiley
public export method test():
    //
    int a = (1,2)
